Changed the footer text and Changed intro title

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 						<!-- One -->
 							<section id="one">
 								<div class="container">
-									<header class="major">
-										<h2>Hello There Stranger</h2>
-										<p>My name is Jahan Cherian. Young Software Engineer, Age Old Dreamer.</p>
+									<header class="major"> <!-- Add QUOTE -->
+										<h2>My name is Jahan Cherian. Young Software Engineer, Age Old Dreamer.</h2>
 									</header>
 									<p>More formally put, I'm an Indian international student, who studied in a British High School in Dubai and finally migrated to soak in the fresh air of California to study as a Computer Science student at UCLA. As of now I am a front end iOS developer and front end web developer, but I'm working on expanding that portfolio as you can see below.</p>
 								</div>
@@ -515,7 +514,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Jahan Cherian. All rights reserved.</li>
+								<li>Phone: +1 (424) 324-0026 | Email: jcherian@ucla.edu</li>
 							</ul>
 						</div>
 					</section>
