A few other changes to the title

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 							<section id="one">
 								<div class="container">
 									<header class="major"> <!-- Add QUOTE -->
-										<h2>My name is Jahan Cherian. Young Software Engineer, Age Old Dreamer.</h2>
+										<h3>Live Life Doing What You Love</h3>
 									</header>
-									<p>More formally put, I'm an Indian international student, who studied in a British High School in Dubai and finally migrated to soak in the fresh air of California to study as a Computer Science student at UCLA. As of now I am a front end iOS developer and front end web developer, but I'm working on expanding that portfolio as you can see below.</p>
+									<p>My name is Jahan Cherian. I'm an Indian international student, who studied in a British High School in Dubai and finally migrated to soak in the fresh air of California to study as a Computer Science student at UCLA. As of now I am a front end iOS developer and front end web developer, but I'm working on expanding that portfolio as you can see below.</p>
 								</div>
 							</section>
 
