Changed name of HWB

--- a/future-without-borders.html
+++ b/future-without-borders.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jahan Cherian: HWB</title>
+		<title>Jahan Cherian: FWB</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -48,10 +48,10 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>Humanz Without Borderz</h2>
+										<h2>Future Without Borders</h2>
 										<p>Connecting People By Transcending Borders.</p>
 									</header>
-									<p>Humanz Without Borderz is an iOS application that has two components to it. There exists the iOS application on the Host side, wherein a European citizen concerned about the Syrian Refugee crisis can make an account and either host a family or donate to the cause. The Host will be able to see any refugee families signed up for the service near his/her area and then offer their home to them. The Syrian Refugee simply has to text our unique number to sign up for the service and connect with a host. The application was brought to life through the integration of several API's and technologies.</p>
+									<p>Future Without Borders is an iOS application that has two components to it. There exists the iOS application on the Host side, wherein a European citizen concerned about the Syrian Refugee crisis can make an account and either host a family or donate to the cause. The Host will be able to see any refugee families signed up for the service near his/her area and then offer their home to them. The Syrian Refugee simply has to text our unique number to sign up for the service and connect with a host. The application was brought to life through the integration of several API's and technologies.</p>
 									<ul>
 										<li>Parse to communicate and store data from both the host and refugee.</li>
 										<li>Twilio to make things simple for a refugee, assuming no access to smart technology.</li>
