--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 									<p>I have participated in three hackathons in the greater Californian area and have had some successes and breakthroughs. These are just a few of my projects that showcase my interests and the kind of software I'm used to writing.</p>
 									<div class="features">
 										<article>
-											<a href="humanz-without-borderz.html" class="image"><img src="images/hwb_front_crop.png" alt="" /></a>
+											<a href="future-without-borders.html" class="image"><img src="images/hwb_front_crop.png" alt="" /></a>
 											<div class="inner">
-												<h4><a href="humanz-without-borderz.html">Humanz Without Borderz</a></h4>
+												<h4><a href="future-without-borders.html">Future Without Borders</a></h4>
 												<p>Winner of the Best use of IBM Bluemix API, Most Entrepreneurially Promising Hack by Perkins Coie and Hack that Best Connects Us by Viasat at SDHacks 2015; this mobile application aims to ease the Syrian Refugee Crisis in Europe in a unique way.</p>
 											</div>
 										</article>
