Added some changes to homepage and redirected FWB

--- a/future-without-borders.html
+++ b/future-without-borders.html
@@ -62,7 +62,7 @@
 										<form action="http://devpost.com/software/humans-without-borders-y5bsew"target="_blank">
     										<input type="submit" value="DevPost" >
 										</form>
-										<form action="https://humans-without-borders.squarespace.com/" target="_blank">
+										<form action="http://futurewithoutborders.org" target="_blank">
     										<input type="submit" value="Temp Site">
 										</form>
 									</div>
