--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Personal Projects</a></li>
-						<li><a href="#three">Things I Can Do</a></li>
-						<li><a href="#four">My Resume</a><li>
+						<li><a href="#three">Who Am I</a></li>
+						<li><a href="#four">Things I Can Do</a></li>
+						<li><a href="#five">My Resume</a><li>
 						<!---<li><a href="#five">Get In Touch With Me</a></li> -->
 					</ul>
 				</nav>
@@ -54,7 +55,7 @@
 									<header class="major"> <!-- Add QUOTE -->
 										<h3>Be Yourself. The World Worships The Original</h3>
 									</header>
-									<p>My name is Jahan Cherian. I'm an Indian international student, who studied in a British High School in Dubai and finally migrated to soak in the fresh air of California to study as a Computer Science student at UCLA. As of now I am a front end iOS developer and front end web developer, but I'm working on expanding that portfolio as you can see below.</p>
+									<p>In that one line, Ingrid Bergman captured the true essence of who I am as a person. Indian born, Dubai raised, British educated, American dreamer. Innovative and Organised. Coding obssessed and Technology enthusiastic. Self learner and Team player. Logical and Creative. My name is Jahan Kuruvilla Cherian, and I am all those things, and so much more.</p>
 								</div>
 							</section>
 
@@ -81,24 +82,37 @@
 									</div>
 								</div>
 							</section>
-
-						<!-- Three -->
-						<section id="three">
+							<!-- Three -->
+							<section id="three">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Just a few things that may seem of interest about my life.</p>
+									<h3>Who Am I</h3>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-music">Play decent music</li>
-										<li class="fa-film">Tell you anything and everything about TV Shows</li>
-										<li class="fa-coffee">Stay up 36 hours straight for Hackathons</li>
-										<li class="fa-thumbs-up">Sculpt a pretty nice beard</li>
-										<li class="fa-terminal">Use VIM</li>
+										<li class="fa-pencil">A passionate writer in my free time</li>
+										<li class="fa-users">Someone who loves to find the best in people and work as a team</li>
+										<li class="fa-paint-brush">An artist by nature</li>
+										<li class="fa-globe">Someone integrated into multicultured societies</li>
+										<li class="fa-child">Dreamer with the hopes of touching the lives of as many people as I can</li>
+										<li class="fa-hand-rock-o">The man you want by your side during the rough times</li>
 									</ul>
 								</div>
 							</section>
-							
-							<section id="four">
+
+						<!-- Four -->
+						<section id="four">
+								<div class="container">
+									<h3>Things I Can Do</h3>
+									<ul class="feature-icons">
+										<li class="fa-code">Write all the code</li>
+										<li class="fa-terminal">Use VIM</li>
+										<li class="fa-coffee">Stay up 36 hours straight for Hackathons</li>
+										<li class="fa-music">Play decent music</li>
+										<li class="fa-film">Tell you anything and everything about TV Shows</li>
+										<li class="fa-thumbs-up">Sculpt a pretty nice beard</li>
+									</ul>
+								</div>
+							</section>
+							<!-- Five -->
+							<section id="five">
 								<div class ="container" >
 									<h3>Resume</h3>
 									<p>Feel free to download my resume in PDF format</p>
