Added some changes to homepage and redirected FWB

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 										<h3>Be Yourself. The World Worships The Original</h3>
 									</header>
 									<p>In that one line, Ingrid Bergman captured the true essence of who I am as a person. Indian born, Dubai raised, British educated, American dreamer. Innovative and Organised. Coding obssessed and Technology enthusiastic. Self learner and Team player. Logical and Creative. My name is Jahan Kuruvilla Cherian, and I am all those things, and so much more.</p>
+									<p>Helping people and revolutionising the world has always been the dream and what better way to do that than through the power of computer science. This is why I love the subject. Computer Science allows me to channel my dreams and beliefs through textual code into real world applications. I work on projects that aim to in some way or the other bring help to people.</p>
+									<p> As of now I am a proficient C, C++ enthusiast, but love to dabble in front end development with iOS applications using Swift and Web development involving HTML and CSS. So if you share my beliefs or are intrigued continue on to read my projects and do get in touch with me.</p>
 								</div>
 							</section>
 
