HackSC stuff updated

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
 												<p>Top 4 finalists amongst over 200+ teams at CalHacks 2.0.A unique project using the unification of the Oculus, Myo Armband and Muse Headband to create a truly immersive experience of viewing the brain, that serves as an exceptional educational platform for students of all kinds but also has huge medical implications.</p>
 											</div>
 										</article>
+										<article>
+											<a href="lighthouse.html" class="image"><img src="images/LightHouse.png" alt=""></a>
+											<div class="inner">
+												<h4><a href="lighthouse.html">
+													LightHouse</a></h4>
+													<p>Best Mobile App at HackSC 2015, this iOS application aims to provide immediate disaster relief to any individual in a dangerous situation.Works on the principal of sending SOS messages to law enforcement agencies and concerned family members.
+										</article>
 									</div>
 								</div>
 							</section>
