--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="lighthouse.html" class="image"><img src="images/LightHouse.png" alt=""></a>
+											<a href="lighthouse.html" class="image"><img src="images/LightHouse.PNG" alt=""></a>
 											<div class="inner">
 												<h4><a href="lighthouse.html">
 													LightHouse</a></h4>
