Redesigned website, and updated home page design

--- a/new/index.html
+++ b/new/index.html
@@ -4,42 +4,36 @@
 		<meta charset="UTF-8">
 		<title> Jahan Cherian Home </title>
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-		<link rel="stylesheet" type="text/css"
-		      href="https://fonts.googleapis.com/css?family=Roboto+Slab">
+		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400|Raleway:300,400,700" rel="stylesheet">
 	</head>
 	<body>
-		<div id="large-header" class="large-header">
-			<div class="content-box"> 
-				<p class="welcome"> WELCOME TO THE HOME OF THE 
-				<div class="definition">
-					<span>SOFTWARE ENGINEER</span>
-					<span>DESIGNER</span>
-					<span>ENTREPRENEUR</span>
-					<span>STUDENT</span>
-				</div>
-				<p class="intro-name"> JAHAN KURUVILLA CHERIAN </P>
+		<div class="container">
+			<div class="intro-name">
+				<h1> Jahan Kuruvilla Cherian </h1>
+			</div>
+			<div class="my_img">
+				<img src="images/my_silhouette.png" alt="" />
+			</div>
+			<div class="definition">
+				<span> SOFTWARE ENGINEER </span>
+				<span> DESIGNER </span>
+				<span> ENTREPRENEUR </span>
+				<span> TEACHER </span>
+				<span> STUDENT </span>
+			</div>
+			<div class="section">
+				<h2> About </h2>
+			</div>
+			<div class="bio">
+				<p> Lorem ipsum dolor sit amet, at maiorum convenire interpretaris pri. Mea omittam iudicabit at, corpora petentium sed ne, duo paulo graecis vivendo cu. Ne vim partem invenire, nam nibh dignissim ut. Cum ei voluptua consequat disputando, et eam debitis elaboraret. Te harum nominati vel.
+
+				Cu vix simul laudem interesset, his ex accumsan corrumpit consequat, ex his decore suavitate. Id has alterum theophrastus. Atomorum aliquando vim no. Id eos modo patrioque. Eu mei aeterno accumsan quaestio, per et commodo ceteros, mei semper vocent aeterno ea.
+
+				Graeci detracto prodesset ea sea. Te voluptua percipitur per, et mea inani legere, nam error prompta fierent no. Accusam intellegebat ea eos, id quo dolorem explicari. Diceret laoreet platonem at eos, usu te amet graeco. No dictas percipitur quo. Ne case tation mentitum vis, et justo putant recusabo his, no eam dolor omnium senserit. Sed ea tibique interesset reprehendunt, prima suscipiantur mel te, ut vidit dolore apeirian mel.
+
+				Ad per eleifend intellegat. Consul philosophia nec at. An has voluptua hendrerit, malis tation fabulas ad sit. Id detracto indoctum maiestatis vix, vix ad habeo illum tempor.
 				</p>
 			</div>
-			<div class="u-vertical-line">
-			</div>
-			<div class="navigation">
-				<ul>
-					<li><p class="nav-tag">Brief</p></li>
-					<li><p class="nav-tag">About</p></li>
-					<li><p class="nav-tag">Projects</p></li>
-					<li><p class="nav-tag">Notes</p></li>
-					<li><p class="nav-tag">Contact</p></li>
-				</ul>
-			</div>
-			<div class="d-vertical-line">
-			</div>
-
-			<canvas id="demo-canvas"></canvas>
 		</div>
 	</body>
-	<!-- Get GSAP Tween animation engine from CDN -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenLite.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>
-	<script type="text/javascript" src="javascripts/particle_connect.js"></script>
 </html>
