Added change from Teacher to Mentor in html

--- a/new/index.html
+++ b/new/index.html
@@ -18,7 +18,7 @@
 				<span> SOFTWARE ENGINEER </span>
 				<span> DESIGNER </span>
 				<span> ENTREPRENEUR </span>
-				<span> TEACHER </span>
+				<span> MENTOR </span>
 				<span> STUDENT </span>
 			</div>
 			<div class="section">
