Added bottom nav

--- a/new/index.html
+++ b/new/index.html
@@ -34,6 +34,16 @@
 				Ad per eleifend intellegat. Consul philosophia nec at. An has voluptua hendrerit, malis tation fabulas ad sit. Id detracto indoctum maiestatis vix, vix ad habeo illum tempor.
 				</p>
 			</div>
+			<div class="bottom-nav">
+				<div class="content">
+					<ul>
+						<li> About <img class="cross" src="images/x.png" /> </li>
+						<li> Work <img class="cross" src="images/x.png" /> </li>
+						<li> Notes <img class="cross" src="images/x.png" /> </li>
+						<li> Contact <img class="cross" src="images/x.png" /> </li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
