Added some basic jQuery

--- a/new/index.html
+++ b/new/index.html
@@ -11,9 +11,6 @@
 			<div class="intro-name">
 				<h1> Jahan Kuruvilla Cherian </h1>
 			</div>
-			<div class="my_img">
-				<img src="images/my_silhouette.png" alt="" />
-			</div>
 			<div class="definition">
 				<span> SOFTWARE ENGINEER </span>
 				<span> DESIGNER </span>
@@ -21,29 +18,36 @@
 				<span> MENTOR </span>
 				<span> STUDENT </span>
 			</div>
-			<div class="section">
-				<h2> About </h2>
-			</div>
-			<div class="bio">
-				<p> Lorem ipsum dolor sit amet, at maiorum convenire interpretaris pri. Mea omittam iudicabit at, corpora petentium sed ne, duo paulo graecis vivendo cu. Ne vim partem invenire, nam nibh dignissim ut. Cum ei voluptua consequat disputando, et eam debitis elaboraret. Te harum nominati vel.
+			<div class="abt-container">
+				<div class="my_img">
+					<img src="images/my_silhouette.png" alt="" />
+				</div>
+				<div class="section">
+					<h2> About </h2>
+				</div>
+				<div class="bio">
+					<p> Lorem ipsum dolor sit amet, at maiorum convenire interpretaris pri. Mea omittam iudicabit at, corpora petentium sed ne, duo paulo graecis vivendo cu. Ne vim partem invenire, nam nibh dignissim ut. Cum ei voluptua consequat disputando, et eam debitis elaboraret. Te harum nominati vel.
 
-				Cu vix simul laudem interesset, his ex accumsan corrumpit consequat, ex his decore suavitate. Id has alterum theophrastus. Atomorum aliquando vim no. Id eos modo patrioque. Eu mei aeterno accumsan quaestio, per et commodo ceteros, mei semper vocent aeterno ea.
+					Cu vix simul laudem interesset, his ex accumsan corrumpit consequat, ex his decore suavitate. Id has alterum theophrastus. Atomorum aliquando vim no. Id eos modo patrioque. Eu mei aeterno accumsan quaestio, per et commodo ceteros, mei semper vocent aeterno ea.
 
-				Graeci detracto prodesset ea sea. Te voluptua percipitur per, et mea inani legere, nam error prompta fierent no. Accusam intellegebat ea eos, id quo dolorem explicari. Diceret laoreet platonem at eos, usu te amet graeco. No dictas percipitur quo. Ne case tation mentitum vis, et justo putant recusabo his, no eam dolor omnium senserit. Sed ea tibique interesset reprehendunt, prima suscipiantur mel te, ut vidit dolore apeirian mel.
+					Graeci detracto prodesset ea sea. Te voluptua percipitur per, et mea inani legere, nam error prompta fierent no. Accusam intellegebat ea eos, id quo dolorem explicari. Diceret laoreet platonem at eos, usu te amet graeco. No dictas percipitur quo. Ne case tation mentitum vis, et justo putant recusabo his, no eam dolor omnium senserit. Sed ea tibique interesset reprehendunt, prima suscipiantur mel te, ut vidit dolore apeirian mel.
 
-				Ad per eleifend intellegat. Consul philosophia nec at. An has voluptua hendrerit, malis tation fabulas ad sit. Id detracto indoctum maiestatis vix, vix ad habeo illum tempor.
-				</p>
+					Ad per eleifend intellegat. Consul philosophia nec at. An has voluptua hendrerit, malis tation fabulas ad sit. Id detracto indoctum maiestatis vix, vix ad habeo illum tempor.
+					</p>
+				</div>
 			</div>
 			<div class="bottom-nav">
 				<div class="content">
 					<ul>
-						<li> About <img class="cross" src="images/x.png" /> </li>
-						<li> Work <img class="cross" src="images/x.png" /> </li>
-						<li> Notes <img class="cross" src="images/x.png" /> </li>
-						<li> Contact <img class="cross" src="images/x.png" /> </li>
+						<li class="about"> About <img id="a-x" class="cross" src="images/x.png" /> </li>
+						<li class="work"> Work <img id="w-x" class="cross" src="images/x.png" /> </li>
+						<li class="notes"> Notes <img id="n-x" class="cross" src="images/x.png" /> </li>
+						<li class="contact"> Contact <img id="c-x" class="cross" src="images/x.png" /> </li>
 					</ul>
 				</div>
 			</div>
 		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="javascripts/main.js"></script>
 	</body>
 </html>
