Added bootstrap and broke everything

--- a/new/index.html
+++ b/new/index.html
@@ -3,15 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title> Jahan Cherian Home </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400|Raleway:300,400,700" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
-			<div class="intro-name">
+			<div class="intro-name row col-xs-12">
 				<h1> Jahan Kuruvilla Cherian </h1>
 			</div>
-			<div class="definition">
+			<div class="definition row col-xs-12">
 				<span> SOFTWARE ENGINEER </span>
 				<span> DESIGNER </span>
 				<span> ENTREPRENEUR </span>
@@ -19,13 +22,13 @@
 				<span> STUDENT </span>
 			</div>
 			<div class="abt-container">
-				<div class="my_img">
-					<img src="images/my_silhouette.png" alt="" />
-				</div>
-				<div class="section">
+				<div class="section" >
 					<h2> About </h2>
 				</div>
-				<div class="bio">
+				<div class="my_img col-xs-6">
+					<img src="images/my_silhouette.png" alt="" />
+				</div>
+				<div class="bio row col-xs-6">
 					<p> Lorem ipsum dolor sit amet, at maiorum convenire interpretaris pri. Mea omittam iudicabit at, corpora petentium sed ne, duo paulo graecis vivendo cu. Ne vim partem invenire, nam nibh dignissim ut. Cum ei voluptua consequat disputando, et eam debitis elaboraret. Te harum nominati vel.
 
 					Cu vix simul laudem interesset, his ex accumsan corrumpit consequat, ex his decore suavitate. Id has alterum theophrastus. Atomorum aliquando vim no. Id eos modo patrioque. Eu mei aeterno accumsan quaestio, per et commodo ceteros, mei semper vocent aeterno ea.
@@ -34,6 +37,12 @@
 
 					Ad per eleifend intellegat. Consul philosophia nec at. An has voluptua hendrerit, malis tation fabulas ad sit. Id detracto indoctum maiestatis vix, vix ad habeo illum tempor.
 					</p>
+				</div>
+			</div>
+			<div class="work-container">
+				<div class="software">
+				</div>
+				<div class="design">
 				</div>
 			</div>
 			<div class="bottom-nav">
@@ -48,6 +57,8 @@
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Latest compiled JavaScript -->
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="javascripts/main.js"></script>
 	</body>
 </html>
