trying to fix everything

--- a/new/index.html
+++ b/new/index.html
@@ -21,8 +21,8 @@
 				<span> MENTOR </span>
 				<span> STUDENT </span>
 			</div>
-			<div class="abt-container">
-				<div class="section" >
+			<div class="abt-container row">
+				<div class="section col-xs-12" >
 					<h2> About </h2>
 				</div>
 				<div class="my_img col-xs-6">
@@ -45,7 +45,7 @@
 				<div class="design">
 				</div>
 			</div>
-			<div class="bottom-nav">
+			<div class="bottom-nav row col-xs-12">
 				<div class="content">
 					<ul>
 						<li class="about"> About <img id="a-x" class="cross" src="images/x.png" /> </li>
