Added some stuff to work page

--- a/new/index.html
+++ b/new/index.html
@@ -25,8 +25,8 @@
 				<div class="section col-xs-12" >
 					<h2> About </h2>
 				</div>
-				<div class="my_img col-xs-6">
-					<img src="images/my_silhouette.png" alt="" />
+				<div class="my_img col-xs-6 last-col">
+					<img id="jahan" src="images/my_silhouette.png" alt="" />
 				</div>
 				<div class="bio row col-xs-6">
 					<p> Lorem ipsum dolor sit amet, at maiorum convenire interpretaris pri. Mea omittam iudicabit at, corpora petentium sed ne, duo paulo graecis vivendo cu. Ne vim partem invenire, nam nibh dignissim ut. Cum ei voluptua consequat disputando, et eam debitis elaboraret. Te harum nominati vel.
@@ -40,9 +40,11 @@
 				</div>
 			</div>
 			<div class="work-container">
-				<div class="software">
+				<div class="software col-xs-6">
+					<p> This is where Software projects go!</p>
 				</div>
-				<div class="design">
+				<div class="design col-xs-6">
+					</p> This is where Design projects go!</p>
 				</div>
 			</div>
 			<div class="bottom-nav row col-xs-12">
