Added images and hover effect

--- a/new/index.html
+++ b/new/index.html
@@ -41,10 +41,10 @@
 			</div>
 			<div class="work-container">
 				<div class="software col-xs-6">
-					<p> This is where Software projects go!</p>
+					<img id="code" src="images/code.png" alt="Software Projects">
 				</div>
 				<div class="design col-xs-6">
-					</p> This is where Design projects go!</p>
+					<img id="design" src="images/design.png" alt="Design Projects">
 				</div>
 			</div>
 			<div class="bottom-nav row col-xs-12">
