Trying to create a more robust navbar

--- a/new/index.html
+++ b/new/index.html
@@ -42,43 +42,21 @@
 			<div class="work-container">
 				<div class="software col-xs-6">
 					<img id="code" src="images/code.png" alt="Software Projects">
-					<div class="carousel slide multi-item-carousel" id="theCarousel">
-						<div class="carousel-inner">
-							<div class="item active">
-								<div class="col-xs-4"><a href="#1"><img src="http://placehold.it/300/f44336/000000" class="img-responsive"></a></div>
-							</div>
-							<div class="item">
-								<div class="col-xs-4"><a href="#1"><img src="http://placehold.it/300/e91e63/000000" class="img-responsive"></a></div>
-							</div>
-							<div class="item">
-								<div class="col-xs-4"><a href="#1"><img src="http://placehold.it/300/9c27b0/000000" class="img-responsive"></a></div>
-							</div>
-							<div class="item">
-								<div class="col-xs-4"><a href="#1"><img src="http://placehold.it/300/673ab7/000000" class="img-responsive"></a></div>
-							</div>
-							<div class="item">
-								<div class="col-xs-4"><a href="#1"><img src="http://placehold.it/300/4caf50/000000" class="img-responsive"></a></div>
-							</div>
-							<div class="item">
-								<div class="col-xs-4"><a href="#1"><img src="http://placehold.it/300/8bc34a/000000" class="img-responsive"></a></div>
-							</div>
-						</div>
-						<a class="left carousel-control" href="#theCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-						<a class="right carousel-control" href="#theCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
-					</div>
 				</div>
 				<div class="design col-xs-6">
 					<img id="design" src="images/design.png" alt="Design Projects">
 				</div>
 			</div>
-			<div class="bottom-nav row col-xs-12">
-				<div class="content">
-					<ul>
-						<li class="about"> About <img id="a-x" class="cross" src="images/x.png" /> </li>
-						<li class="work"> Work <img id="w-x" class="cross" src="images/x.png" /> </li>
-						<li class="notes"> Notes <img id="n-x" class="cross" src="images/x.png" /> </li>
-						<li class="contact"> Contact <img id="c-x" class="cross" src="images/x.png" /> </li>
-					</ul>
+			<div class="nav-bg row col-xs-12">
+				<div class="bottom-nav col-xs-12">
+					<div class="content">
+						<ul>
+							<li class="about"> About <img id="a-x" class="cross" src="images/x.png" /> </li>
+							<li class="work"> Work <img id="w-x" class="cross" src="images/x.png" /> </li>
+							<li class="notes"> Notes <img id="n-x" class="cross" src="images/x.png" /> </li>
+							<li class="contact"> Contact <img id="c-x" class="cross" src="images/x.png" /> </li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
