--- a/new/index.html
+++ b/new/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400|Raleway:300,400,700" rel="stylesheet">
 	</head>
@@ -42,6 +43,12 @@
 			<div class="work-container">
 				<div class="software col-xs-6">
 					<img id="code" src="images/code.png" alt="Software Projects">
+					<div class="projects row">
+						<div><img src="images/FWB.png" alt="Future Without Borders"> Future Without Borders </div>
+						<div> <img src="images/Lighthouse.png" alt="Lighthouse">Lighthouse </div>
+						<div><img src="images/Stitch.png" alt="Stitch"> Stitch </div>
+						<div> <img src="images/Quotebook.png" alt="Quotebook">Quotebook </div>
+					</div>
 				</div>
 				<div class="design col-xs-6">
 					<img id="design" src="images/design.png" alt="Design Projects">
@@ -61,6 +68,7 @@
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script type="text/javascript" src="slick/slick.min.js"></script>
 		<!-- Latest compiled JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="javascripts/main.js"></script>
