--- a/new/index.html
+++ b/new/index.html
@@ -6,9 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400|Raleway:300,400,700" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 	</head>
 	<body>
 		<div class="container">
@@ -44,10 +43,36 @@
 				<div class="software col-xs-6">
 					<img id="code" src="images/code.png" alt="Software Projects">
 					<div class="projects row">
-						<div><img src="images/FWB.png" alt="Future Without Borders"> Future Without Borders </div>
-						<div> <img src="images/Lighthouse.png" alt="Lighthouse">Lighthouse </div>
-						<div><img src="images/Stitch.png" alt="Stitch"> Stitch </div>
-						<div> <img src="images/Quotebook.png" alt="Quotebook">Quotebook </div>
+						<div class="project-container">
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Future Without Borders </h5>
+								<div class="projectContent">
+									<img src="images/FWB.png" alt="Future Without Borders">
+								</div>
+								<p class="description"> Helping connect humans for humans </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Lighthouse </h5>
+								<div class="projectContent">
+									<img src="images/Lighthouse.png" alt="Lighthouse">
+								</div>
+								<p class="description"> Changing safety one click at a time </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Stitch</h5>
+								<div class="projectContent">
+									<img src="images/Stitch.png" alt="Stitch">
+								</div>
+								<p class="description"> Filters on LSD </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Quotebook </h5>
+								<div class="projectContent">
+									<img src="images/Quotebook.png" alt="Quotebook">
+								</div>
+								<p class="description"> Remember your loved ones like never before </p>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="design col-xs-6">
@@ -68,8 +93,6 @@
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script type="text/javascript" src="slick/slick.min.js"></script>
-		<!-- Latest compiled JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="javascripts/main.js"></script>
 	</body>
