Fixed image positioning

--- a/new/index.html
+++ b/new/index.html
@@ -22,7 +22,7 @@
 				<span> STUDENT </span>
 			</div>
 			<div class="abt-container row">
-				<div class="section col-xs-12" >
+				<div class="section col-xs-12" style="color: #F5A623" >
 					<h2> About </h2>
 				</div>
 				<div class="my_img col-xs-6 last-col">
@@ -40,6 +40,9 @@
 				</div>
 			</div>
 			<div class="work-container">
+				<div class="section col-xs-12" style="color: #74CC13">
+					<h2> Work </h2>
+				</div>
 				<div class="software col-xs-6">
 					<img id="code" src="images/code.png" alt="Software Projects">
 					<div class="projects row">
@@ -83,7 +86,7 @@
 				<div class="bottom-nav col-xs-12">
 					<div class="content">
 						<ul>
-							<li class="about"> About <img id="a-x" class="cross" src="images/x.png" /> </li>
+							<li class="about" style="color: #F5A623"> About <img id="a-x" class="cross" src="images/x.png" /> </li>
 							<li class="work"> Work <img id="w-x" class="cross" src="images/x.png" /> </li>
 							<li class="notes"> Notes <img id="n-x" class="cross" src="images/x.png" /> </li>
 							<li class="contact"> Contact <img id="c-x" class="cross" src="images/x.png" /> </li>
