--- a/new/index.html
+++ b/new/index.html
@@ -39,10 +39,13 @@
 					</p>
 				</div>
 			</div>
-			<div class="work-container">
+			<div class="work-container row">
 				<div class="section col-xs-12" style="color: #74CC13">
 					<h2> Work </h2>
 				</div>
+				<!---<div class="info row col-xs-6">
+					<p> Lorem ipsum dolor </p>
+				</div>-->
 				<div class="software col-xs-6">
 					<img id="code" src="images/code.png" alt="Software Projects">
 					<div class="projects row">
