Added more robust description and project cards

--- a/new/index.html
+++ b/new/index.html
@@ -29,13 +29,20 @@
 					<img id="jahan" src="images/my_silhouette.png" alt="" />
 				</div>
 				<div class="bio row col-xs-6">
-					<p> Lorem ipsum dolor sit amet, at maiorum convenire interpretaris pri. Mea omittam iudicabit at, corpora petentium sed ne, duo paulo graecis vivendo cu. Ne vim partem invenire, nam nibh dignissim ut. Cum ei voluptua consequat disputando, et eam debitis elaboraret. Te harum nominati vel.
-
-					Cu vix simul laudem interesset, his ex accumsan corrumpit consequat, ex his decore suavitate. Id has alterum theophrastus. Atomorum aliquando vim no. Id eos modo patrioque. Eu mei aeterno accumsan quaestio, per et commodo ceteros, mei semper vocent aeterno ea.
-
-					Graeci detracto prodesset ea sea. Te voluptua percipitur per, et mea inani legere, nam error prompta fierent no. Accusam intellegebat ea eos, id quo dolorem explicari. Diceret laoreet platonem at eos, usu te amet graeco. No dictas percipitur quo. Ne case tation mentitum vis, et justo putant recusabo his, no eam dolor omnium senserit. Sed ea tibique interesset reprehendunt, prima suscipiantur mel te, ut vidit dolore apeirian mel.
-
-					Ad per eleifend intellegat. Consul philosophia nec at. An has voluptua hendrerit, malis tation fabulas ad sit. Id detracto indoctum maiestatis vix, vix ad habeo illum tempor.
+					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in his <b>third year</b> at <b>UCLA</b>.<br>
+					In my journey through the road of 1’s and 0’s I have found that the true power of a computer scientist lies in the ability to shape reality and transform the future all while sitting behind the screen of a 13-inch computer. 
+					I have learnt that it is not only the movement of one’s fingers across a sleek keyboard, transcribing code like a conductor directs a musical masterpiece, 
+					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
+					As an avid <b>iOS developer</b> and ambitious <b>systems programmer</b>, I hope to use my skills in the field of software engineering to guide people and 
+					companies to a higher level. I have worked with several people to bring about some impactful applications, and have worked with well reputed companies like 
+					<b>Autodesk</b> to help push the boundaries of existing products.<br>
+					But my passion doesn’t stop at the intricacies of computer science, they continue to flow into the field of art through the form of <b>graphic design and illustration</b>. 
+					Working through <b>Sketch</b> I use my intuition and gut feeling to design the best possible UI/UX that goes into my apps, and follow through by creating 
+					the graphics that truly resonate with who I am. <br>
+					These are my passions, but what are passions if we don’t try and share them with the world… Throughout my schooling journey and beyond, I have always chosen 
+					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
+					<b>Upsilon Pi Epsilon</b> I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
+					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel free to explore my work and resume, browse my publicly available notes, and reach out to me through any of my social profiles so that we can do great things together!
 					</p>
 				</div>
 			</div>
@@ -77,6 +84,28 @@
 									<img src="images/Quotebook.png" alt="Quotebook">
 								</div>
 								<p class="description"> Remember your loved ones like never before </p>
+							</div>
+						</div>
+					</div>
+					<div class="project-info row">
+						<div class="project-content col-xs-6">
+							<img class="proj-image" src="images/FWB-Iphone-Mockup.png" alt="Future Without Borders iPhone model">
+						</div>
+						<div class="project-information col-xs-6">
+							<div class="cancel"> 
+								<img style="float: right; width:30px" src="images/x.png">
+							</div>
+							<div class="project-title row">
+								<h4> Future Without Borders </h4>
+							</div>
+							<div class="proj-description-detail row">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift, Objective-C <br>
+								<b>Creation:</b> SD Hacks, October 2015 <br>
+								<b>Awards:</b> Facebook<br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
 							</div>
 						</div>
 					</div>
