Added a couple more projects

--- a/new/index.html
+++ b/new/index.html
@@ -85,6 +85,20 @@
 								</div>
 								<p class="description"> Remember your loved ones like never before </p>
 							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Scavenger </h5>
+								<div class="projectContent">
+									<img src="images/Scavenger.png" alt="Scavenger">
+								</div>
+								<p class="description"> Leave messages on maps for others to find </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> BrainSpace VR</h5>
+								<div class="projectContent">
+									<img src="images/BrainSpace.png" alt="BrainSpace VR">
+								</div>
+								<p class="description"> See and feel the brain like never before </p>
+							</div>
 						</div>
 					</div>
 					<div class="project-info row">
