Fixed some grammar

--- a/new/index.html
+++ b/new/index.html
@@ -29,7 +29,7 @@
 					<img id="jahan" src="images/my_silhouette.png" alt="" />
 				</div>
 				<div class="bio row col-xs-6">
-					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in his <b>third year</b> at <b>UCLA</b>.<br>
+					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in my <b>third year</b> at <b>UCLA</b>.<br>
 					In my journey through the road of 1’s and 0’s I have found that the true power of a computer scientist lies in the ability to shape reality and transform the future all while sitting behind the screen of a 13-inch computer. 
 					I have learnt that it is not only the movement of one’s fingers across a sleek keyboard, transcribing code like a conductor directs a musical masterpiece, 
 					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
