--- a/new/index.html
+++ b/new/index.html
@@ -22,7 +22,7 @@
 				<span> STUDENT </span>
 			</div>
 			<div class="section" style="color: #F5A623" >
-				<h2> About </h2>
+				<h2 id="current_section"> About </h2>
 			</div>
 			<div id="about" class="abt-container row">
 				<div class="my_img col-xs-6 last-col">
@@ -47,86 +47,80 @@
 				</div>
 			</div>
 			<div class="work-container row">
-				<div class="section col-xs-12" style="color: #74CC13">
-					<h2> Work </h2>
-				</div>
-				<!---<div class="info row col-xs-6">
-		<p> Lorem ipsum dolor </p>
-		</div>-->
-		<div class="software col-xs-6">
-			<img id="code" src="images/code.png" alt="Software Projects">
-			<div class="projects row">
-				<div class="project-container">
-					<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-						<h5 class="projectCell"> Future Without Borders </h5>
-						<div class="projectContent">
-							<img src="images/FWB.png" alt="Future Without Borders">
+				<div class="software col-xs-6">
+					<img id="code" src="images/code.png" alt="Software Projects">
+					<div class="projects row">
+						<div class="project-container">
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Future Without Borders </h5>
+								<div class="projectContent">
+									<img src="images/FWB.png" alt="Future Without Borders">
+								</div>
+								<p class="description"> Helping connect humans for humans </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Lighthouse </h5>
+								<div class="projectContent">
+									<img src="images/Lighthouse.png" alt="Lighthouse">
+								</div>
+								<p class="description"> Changing safety one click at a time </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Stitch</h5>
+								<div class="projectContent">
+									<img src="images/Stitch.png" alt="Stitch">
+								</div>
+								<p class="description"> Filters on LSD </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Quotebook </h5>
+								<div class="projectContent">
+									<img src="images/Quotebook.png" alt="Quotebook">
+								</div>
+								<p class="description"> Remember your loved ones like never before </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> Scavenger </h5>
+								<div class="projectContent">
+									<img src="images/Scavenger.png" alt="Scavenger">
+								</div>
+								<p class="description"> Leave messages on maps for others to find </p>
+							</div>
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<h5 class="projectCell"> BrainSpace VR</h5>
+								<div class="projectContent">
+									<img src="images/BrainSpace.png" alt="BrainSpace VR">
+								</div>
+								<p class="description"> See and feel the brain like never before </p>
+							</div>
 						</div>
-						<p class="description"> Helping connect humans for humans </p>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-						<h5 class="projectCell"> Lighthouse </h5>
-						<div class="projectContent">
-							<img src="images/Lighthouse.png" alt="Lighthouse">
+					<div class="project-info row">
+						<div class="project-content col-xs-6">
+							<img class="proj-image" src="images/FWB-Iphone-Mockup.png" alt="Future Without Borders iPhone model">
 						</div>
-						<p class="description"> Changing safety one click at a time </p>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-						<h5 class="projectCell"> Stitch</h5>
-						<div class="projectContent">
-							<img src="images/Stitch.png" alt="Stitch">
+						<div class="project-information col-xs-6">
+							<div class="cancel"> 
+								<img style="float: right; width:30px" src="images/x.png">
+							</div>
+							<div class="project-title row">
+								<h4> Future Without Borders </h4>
+							</div>
+							<div class="proj-description-detail row">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift, Objective-C <br>
+								<b>Creation:</b> SD Hacks, October 2015 <br>
+								<b>Awards:</b> Facebook<br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>
 						</div>
-						<p class="description"> Filters on LSD </p>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-						<h5 class="projectCell"> Quotebook </h5>
-						<div class="projectContent">
-							<img src="images/Quotebook.png" alt="Quotebook">
-						</div>
-						<p class="description"> Remember your loved ones like never before </p>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-						<h5 class="projectCell"> Scavenger </h5>
-						<div class="projectContent">
-							<img src="images/Scavenger.png" alt="Scavenger">
-						</div>
-						<p class="description"> Leave messages on maps for others to find </p>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-						<h5 class="projectCell"> BrainSpace VR</h5>
-						<div class="projectContent">
-							<img src="images/BrainSpace.png" alt="BrainSpace VR">
-						</div>
-						<p class="description"> See and feel the brain like never before </p>
-					</div>
-				</div>
-			</div>
-			<div class="project-info row">
-				<div class="project-content col-xs-6">
-					<img class="proj-image" src="images/FWB-Iphone-Mockup.png" alt="Future Without Borders iPhone model">
-				</div>
-				<div class="project-information col-xs-6">
-					<div class="cancel"> 
-						<img style="float: right; width:30px" src="images/x.png">
-					</div>
-					<div class="project-title row">
-						<h4> Future Without Borders </h4>
-					</div>
-					<div class="proj-description-detail row">
-						<p> <b>Platform:</b> iOS <br>
-						<b>Languages:</b> Swift, Objective-C <br>
-						<b>Creation:</b> SD Hacks, October 2015 <br>
-						<b>Awards:</b> Facebook<br>
-						<b>Details:</b><br>
-						This app was created for ...
-						</p>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="design col-xs-6">
-			<img id="design" src="images/design.png" alt="Design Projects">
-		</div>
+				<div class="design col-xs-6">
+					<img id="design" src="images/design.png" alt="Design Projects">
+				</div>
 			</div>
 			<div class="nav-bg row col-xs-12">
 				<div class="bottom-nav col-xs-12">
