--- a/new/index.html
+++ b/new/index.html
@@ -11,7 +11,7 @@
 			<div class="upper-nav">
 				<div class="my-logo">
 					<span class="main-logo">
-						<a href="/">
+						<a href="#about">
 							<img src="images/logo.png" >
 						</a>
 					</span>
@@ -19,36 +19,87 @@
 				<div class="nav-container">
 					<div class="nav-bar"> 
 						<div class="contains"> 
-								<div class="items"> 
-									<a href="/">
-										<img class="off" src="images/about_img_off.png">
-										<img class="on" src="images/about_img.png">
-									</a>
-								</div>
-								<div class="items">
-									<a href="/">
-										<img class="off" src="images/work_img_off.png">
-										<img class="on" src="images/work_img.png">
-									</a>
-								</div>
-								<div class="items">
-									<a href="/">
-										<img class="off" src="images/notes_img_off.png">
-										<img class="on" src="images/notes_img.png">
-									</a>
-								</div>
-								<div class="items">
-									<a href="/">
-										<img class="off" src="images/contact_img_off.png">
-										<img class="on" src="images/contact_img.png">
-									</a>
-								</div>
+							<div class="items"> 
+								<a href="#about">
+									<img class="off" src="images/about_img_off.png">
+									<img class="on" src="images/about_img.png">
+								</a>
+							</div>
+							<div class="items">
+								<a href="/">
+									<img class="off" src="images/work_img_off.png">
+									<img class="on" src="images/work_img.png">
+								</a>
+							</div>
+							<div class="items">
+								<a href="/">
+									<img class="off" src="images/notes_img_off.png">
+									<img class="on" src="images/notes_img.png">
+								</a>
+							</div>
+							<div class="items">
+								<a href="/">
+									<img class="off" src="images/contact_img_off.png">
+									<img class="on" src="images/contact_img.png">
+								</a>
+							</div>
 						</div>
 					</div>	
 				</div>
 			</div>
-		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="javascript/main.js"></script>
+			<div class="main-content">
+				<div id="about" class="about" >
+					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in my <b>third year</b> at <b>UCLA</b>.<br>
+					In my journey through the road of 1’s and 0’s I have found that the true power of a computer scientist lies in the ability to shape reality and transform the future all while sitting behind the screen of a 13-inch computer. 
+					I have learnt that it is not only the movement of one’s fingers across a sleek keyboard, transcribing code like a conductor directs a musical masterpiece, 
+					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
+					As an avid <b>iOS developer</b> and ambitious <b>systems programmer</b>, I hope to use my skills in the field of software engineering to guide people and 
+					companies to a higher level. I have worked with several people to bring about some impactful applications, and have worked with well reputed companies like 
+					<b>Autodesk</b> to help push the boundaries of existing products.<br>
+					But my passion doesn’t stop at the intricacies of computer science, they continue to flow into the field of art through the form of <b>graphic design and illustration</b>. 
+					Working through <b>Sketch</b> I use my intuition and gut feeling to design the best possible UI/UX that goes into my apps, and follow through by creating 
+					the graphics that truly resonate with who I am. <br>
+					These are my passions, but what are passions if we don’t try and share them with the world… Throughout my schooling journey and beyond, I have always chosen 
+					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
+					<b>Upsilon Pi Epsilon</b> I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
+					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel free to explore my work and resume, browse my publicly available notes, and reach out to me through any of my social profiles so that we can do great things together!
+					</p>
+				</div>
+			</div>
+			<div class="footer">
+				<div class="social-container">
+					<div class="icons">
+						<a href="https://www.facebook.com/jahan.cherian" target="_blank">
+							<img class="social-icons" src="images/fb.png">
+						</a>
+					</div>
+					<div class="icons">
+						<a href="https://www.linkedin.com/in/jahancherian" target="_blank">
+							<img class="social-icons" src="images/linkedin.png">
+						</a>
+					</div>
+					<div class="icons">
+						<a href="https://github.com/jcherianucla" target="_blank">
+							<img class="social-icons" src="images/github.png">
+						</a>
+					</div>
+					<div class="icons">
+						<a href="https://www.instagram.com/jahancherian/" target="_blank">
+							<img class="social-icons" src="images/insta.png">
+						</a>
+					</div>
+					<div class="icons">
+						<a href="mailto:jcherian@g.ucla.edu?Subject=Getting%20in%20touch" target="_top">
+							<img class="social-icons" src="images/mail.png">
+						</a>
+					</div>
+					<div class="icons">
+						<a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">
+							<img class="social-icons" src="images/resume.png">
+						</a>
+					</div>
+				</div>
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+				<script src="javascript/main.js"></script>
 	</body>
 </html>
