--- a/new/index.html
+++ b/new/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta property="og:site name" content="Jahan Cherian's Website">
+		<meta property="og:image" content="images/logo.png">
 		<title> Jahan Cherian's Website </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
