Added open graph meta

--- a/new/index.html
+++ b/new/index.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta property="og:site name" content="Jahan Cherian's Website">
+		<meta property="og:site_name" content="Jahan Cherian's Website">
+		<meta property="og:title" content="About Jahan Cherian">
+		<meta property="og:description" content="Learn more about Jahan Cherian">
 		<meta property="og:image" content="images/logo.png">
+		<meta property="og:url" content="www.jahancherian.com">
+		<meta property="og:type" content="blog">
 		<title> Jahan Cherian's Website </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
